# deep-mind-lab

./: .gitignore  Makefile  README.md  pyproject.toml
env/: README.md  __init__.py  base.py  base_env.py  constants.py  multiFrameGym.py  openai.py  parallelGym.py  pickle.py  unity.py  unityagents.py  worker.py
examples/blackjack/: Monte Carlo.ipynb  plot_utils.py
examples/cartpole/: Hill Climbing.ipynb  Reinforce.ipynb
examples/cliffwalking/: Temporal Difference.ipynb  Temporal_Difference.ipynb  plot_utils.py  tests.py
examples/gridworld/: Reinforce.ipynb  utils.py
examples/lunarlander/: Deep Q Network.ipynb
examples/mountaincar/: Cross Entropy.ipynb  Discretization.ipynb
examples/pong/: PPO.ipynb  Reinforce.ipynb  utils.py
examples/taxi/: Temporal Difference.ipynb  agent.py  main.py  monitor.py
gym/blackjack/: Monte_Carlo.ipynb
gym/cliffwalking/: plot_utils.py
gym/taxi/: agent.py  monitor.py
memory/: README.md  __init__.py  replayBuffer.py
model/: README.md  __init__.py  conv2DBody.py  fcBody.py
policy/: README.md  __init__.py  alphaMC.py  base.py  crossEntropy.py  discretizedSarsaMax.py  dqn.py  everyVisitMC.py  firstVisitMC.py  helper.py  hillClimbing.py  ppoMDAUE.py  ppoParallel.py  random.py  reinforce.py  reinforceParallel.py  sarsa.py  sarsaExpected.py  sarsaMax.py
qtable/: __init__.py  base.py  dict_qtable.py
train/: README.md  __init__.py  base.py  crossEntropy.py  hillClimbing.py  ppoMDAUE.py  ppoParallel.py  reinforce.py  reinforceParallel.py  trainerDQN.py  trainerMC.py  trainerTD.py
utils/: README.md
