[tool.poetry]
name = "deep-mind-lab"
version = "0.1.0"
description = ""
authors = ["regokan <regokan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gym = "^0.26.2"
matplotlib = "^3.9.2"
notebook = "^7.2.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
