[tool.poetry]
name = "deep-mind-lab"
version = "0.1.0"
description = ""
authors = ["regokan <regokan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.11"
gym = {extras = ["box2d"], version = "^0.26.2"}
gym-notices = "^0.0.8"
matplotlib = "^3.9.2"
notebook = "^7.2.2"
notebook_shim = "^0.2.4"
seaborn = "^0.13.2"
pygame = "2.1.0"
pyvirtualdisplay = "^3.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
wheel = "^0.45.0"
setuptools = "^75.3.0"
mlagents = "^1.1.0"
grpcio = "1.48.2"
h5py = "^3.12.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
